[project]
name = "feature-selection-methods"
version = "0.1.0"
description = "PFE project at ENSAI analyzing and reproducing results from a research paper."
authors = [
    {name = "TomBrault"},
    {name = "MarceauLeBot"},
    {name = "AlexandreMaghames"}
]

license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lib"]
package-dir = {"" = "src"}
